@@ -3,6 +3,7 @@ Stable versions
 
 4.3.2 ():
 	Fix bugs caught in the OpenMPT test cases:
+	- fix XM portamento target reset on new instrument
 	- fix XM tremolo and vibrato waveforms
 	- fix tremolo rate
 	Other changes:
